src/views/models/StructureView/FieldRow.scss
@import '~styles/variables';
@import '~styles/mixins';

.root {

}

.row {
  border-bottom: 1px solid $grey2;
  padding: 0 40px;
  height: 76px;
  display: flex;
  align-items: center;

  &:hover {
    background: $grey1;

    .addDescription {
      visibility: visible;

      &:hover {
        color: $grey4;
      }
    }

    .controls span {
      visibility: visible;
    }
  }

  &.active {
    background: $grey1;
  }
}

.fieldName, .type, .description, .constraints, .permissions {
  display: flex;
  align-items: center;
  padding-right: 20px;
}

.fieldName {
  width: 166px;
  font-family: Monaco, monospace;
  font-size: 14px;
  cursor: pointer;
  color: $grey5;
}

.type {
  width: 173px;
  font-family: Monaco, monospace;
  color: $grey4;
  font-size: 12px;
  flex-shrink: 0;
  cursor: pointer;

  span {
    background: $grey1;
    padding: 7px 8px;
  }
}

.description {
  flex: 1;
  font-size: 13px;
  font-weight: 300;
  color: $grey4;

  .descriptionText {
    padding: 20px 30px 20px 0;
    margin: -20px -30px -20px 0;
  }

  .addDescription {
    visibility: hidden;
    font-weight: 600;
    cursor: pointer;
    color: $grey3;
    padding: 20px 30px 20px 0;
    margin: -20px -30px -20px 0;
  }

  input {
    border: 0;
    background: none;
    width: 100%;
    padding: 10px 0;
    margin: -10px 0;

    @include placeholder {
      color: $grey4;
    }
  }
}

.constraints {
  width: 208px;
  height: 100%;
  position: relative;
}

.permissions {
  height: 100%;
  width: 208px;
  position: relative;
}

.constraints, .permissions {
  &.active:after {
    content: '';
    width: 100%;
    height: 3px;
    position: absolute;
    background: $accent-shade;
    left: -5%;
    bottom: -1px;
  }

  .label {
    text-transform: uppercase;
    font-size: 11px;
    font-weight: 300;
    color: $grey4;
    border: 1px solid $grey3;
    border-radius: 4px;
    padding: 3px 6px;
    margin-right: 5px;
    cursor: pointer;

    &.add {
      opacity: 0.4;
    }

    &:hover {
      border-color: $grey4;
      color: $grey5;
      opacity: 1;
    }
  }
}

.controls {
  width: 55px;
  display: flex;
  align-items: center;

  span {
    visibility: hidden;
    cursor: pointer;

    &:last-child {
      margin-left: 15px;
    }

    &:hover svg {
      fill: $grey4;
    }
  }

  svg {
    fill: $grey3;
  }
}

